Committing updates to local branch, uncompiled

--- a/pico/CMakeLists.txt
+++ b/pico/CMakeLists.txt
@@ -16,31 +16,37 @@ add_compile_options(-Wall -Wextra -Wnull-dereference -Wno-unused-parameter -Wno-
 
 
 add_executable(applevga)
+pico_set_binary_type(applevga copy_to_ram)
+pico_set_linker_script(applevga ${CMAKE_CURRENT_SOURCE_DIR}/memmap_copy_to_ram_custom.ld)
 
 pico_generate_pio_header(applevga
     ${CMAKE_CURRENT_SOURCE_DIR}/vga.pio)
 pico_generate_pio_header(applevga
     ${CMAKE_CURRENT_SOURCE_DIR}/abus.pio)
 
+file(GLOB TEXTFONT_SRC_FILES textfont/*.c)
 target_sources(applevga PUBLIC
     main.c
     abus.c
     buffers.c
     colors.c
+    config.c
+    device_regs.c
     render.c
     render_hires.c
     render_lores.c
     render_testpat.c
     render_text.c
-    textfont_iie.c
-    textfont_iiplus.c
+    ${TEXTFONT_SRC_FILES}
     vga.c
+    videx_vterm.c
 )
 target_include_directories(applevga PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(applevga PUBLIC
     pico_multicore
     pico_stdlib
     hardware_dma
+    hardware_flash
     hardware_pio
 )
 
